--- a/Loader/Loader.vcxproj.filters
+++ b/Loader/Loader.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="peb_utils.h">
+    <ClInclude Include="shcutils.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
